--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Api",
+  "name": "covidtrackerapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.6",
     "sequelize": "^5.21.6",
     "sqlite": "^4.0.7",
     "sqlite3": "^4.1.1"
