--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv-safe": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.6",
     "sequelize": "^5.21.6",
